# src/routes/specifications.routes.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express';
 
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => createSpecificationController.handle(request, response));
+const createSpecificationController = new CreateSpecificationController();
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export { specificationsRoutes };
